# living-world-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Animal.cpp  Animal.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Position.cpp  Position.h  World.cpp  World.h
src/animals/: Animal.cpp  Animal.h  Sheep.cpp  Sheep.h  Wolf.cpp  Wolf.h
src/plants/: CMakeLists.txt  Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Plant.cpp  Plant.h  Toadstool.cpp  Toadstool.h
src/utils/: OrganismInitParams.h
